--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,7 +1,7 @@
 # compiled output
 /dist
 /node_modules
-
+.gitignore
 # Logs
 logs
 *.log
@@ -19,7 +19,7 @@ lerna-debug.log*
 /.nyc_output
 
 # IDEs and editors
-/.idea
+.idea
 .project
 .classpath
 .c9/
